--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
   <script>
     // Function for playing with the computer
     function playWithComputer() {
-      window.location.href = "play-with-computer.html"; // Redirect to the play with computer page
+      window.location.href = "XOXO-Showdown/player-vs-computer-ai
+/tic-tac-toe-ai.html
+"; // Redirect to the play with computer page
     }
 
     // Function for 1v1 mode
