--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
   <script>
     // Function for playing with the computer
     function playWithComputer() {
-      window.location.href = "XOXO-Showdown/player-vs-computer-ai
-/tic-tac-toe-ai.html
-"; // Redirect to the play with computer page
+      window.location.href = "player-vs-computer-ai/tic-tac-toe-ai.html"; // Redirect to the AI page
     }
 
     // Function for 1v1 mode
