--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     // Function for 1v1 mode
     function play1v1() {
-      window.location.href = "play-1v1.html"; // Redirect to the 1v1 page
+      window.location.href = "player-vs-player/index.html"; // Redirect to the 1v1 page
     }
 
     // Action for the floating button (info/help)
